@@ -2,12 +2,29 @@
 
 META "title" "Rectangle2D"
 
+Background {
+  skyColor 0.2 0.2 0.2
+}
+
 Transform {
   children Shape {
     appearance Appearance {
       material Material { }
     }
+    geometry Rectangle2D { }
+  }
+}
+
+Transform {
+  translation 0 2.5 0
+  children Shape {
+    appearance Appearance {
+      texture ImageTexture {
+        url "../images/image.png"
+      }
+    }
     geometry Rectangle2D {
+      solid FALSE
     }
   }
 }
