@@ -1,3 +1,7 @@
+2013-02-06  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* Math.h: 
+
 2013-02-04  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* Box3.h:
