@@ -1,3 +1,11 @@
+2013-02-06  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* ArcClose2D.h:
+	* ArcClose2D.cpp:
+	* Rectangle2D.cpp:
+	* X3DGeometryNode.h:
+	* X3DGeometryNode.cpp: 
+
 2013-02-05  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* Makefile.am:
