@@ -1,3 +1,10 @@
+2013-02-06  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* image.png:
+	* image.svg:
+	* ArcClose2D.wrl:
+	* Rectangle2D.wrl: 
+
 2013-02-05  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* Library.mdproj:
